# kittytgp

./: CHANGELOG.md  README.md  pyproject.toml
kittytgp/: __init__.py  animation.py  cli.py  core.py  formats.py
tests/: test_core.py
